2007-02-12 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	
	* Make TnyCamelSendQueue subclassable - add accessors
	  for setting the TnyCamelTransportAccount, and _flush

2007-02-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various bugfixes for the IDLE feature
	* Error reporting for the TnySendQueue
	* Bugfix for the Maildirs of the tnycamelsendqueue
	* Support in the IDLE (Push E-mail) feature for EXPUNGE
	* Major rewrites in camel-lite and important changes related to memory
	and reference counting in TnyCamelFolder and CamelFolder. Please keep
	an eye on memory from now on, as things related to reference counting
	of folders has changed.
	* Added reference debugging instrumentation to camel-lite
	* Rewrote certain parts of the IDLE support
	* Bugfixes in the condstore support

	* This was a major API change

2007-02-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* Removed the public constructor of TnyCamelFolder, use the private
	one if you really need it (normal people don't, and you can make the
	library crash of you use it wrongfully)
	* A factory for TnyCamelFolder instances will be put in place soon.

	* This was a major API change

2007-02-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for non-blocking read in the SSL streams
	* Various bugfixing on the IDLE feature
	* Various bugfixing on summaries and disconnecting, reconnecting

2007-02-06  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* update TnyMaemoDevice

2007-02-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for IMAP IDLE (RFC 2177)

2007-02-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for issue #10

2007-02-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* CamelDiscoStore and CamelDiscoFolder implementation of the POP3
	provider of camel-lite. This means that the POP3 support now supports
	offline viewing E-mails
	* Changed a silly internal libtinymail-camel API

	* This was a major API change in libtinymail-camel

2007-01-31  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	